[style] Fix first letter of labels not capitalized
This error is caused by setting label::before { content: " "; },
which makes the first letter a whitespace on all labels, neccessary
 for browsers that doesn't support the grid layout.

This commit clears the content if the browser supports the grid layout,
properly capitalizing labels again. If a browser doesn't support grid
layout, labels stay as they are provided by the bridge.

--- a/static/style.css
+++ b/static/style.css
@@ -202,6 +202,10 @@ form {
 		text-align: right;
 	}
 
+	.parameters label::before {
+		content: none;
+	}
+
 	.parameters input[type="text"],
 	.parameters input[type="number"],
 	.parameters input[type="checkbox"],
